[package]
name = "lavagna_server"
version = "1.0.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "The uncluttered blackboard"
homepage = "https://github.com/alepez/lavagna"
repository = "https://github.com/alepez/lavagna"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
warp = "0.3.1"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
clap = { version = "3.0", features = ["derive", "env"] }
pretty_env_logger = "0.4"
thiserror = "1.0"
tokio-stream = "0.1"
log = "0.4"
